search and click feature added

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <div class="grid-container">
         <div class="grid-1">
         <form>
-            <input id="myInput" placeholder="Some text.." value="">
+            <input id="myInput" placeholder="Some text.." value="" id='search'>
             <!-- <input type="submit" id="myBtn" value="Submit"> -->
         </form>
             <div class="sidebar">
@@ -38,8 +38,8 @@
     <script src="{% static 'map-initialize.js' %}"></script>
     <script src="{% static 'make-new-layer.js' %}"></script>
     <script src="{% static 'base-data-click.js' %}"></script>
-    <script src="{% static 'search.js' %}"></script>
     <script src="{% static 'index.js' %}"></script>
+    <script src="{% static 'search.js' %}"></script>
     <!-- <script src="{% static 'main.js' %}"></script> -->
     
     
