--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@
                 <input type="checkbox" name ='baseLayerRadioButton' value='roadnetwork' id='roadnetwork'>Road Network<br>
                 <input type="checkbox" name ='baseLayerRadioButton' value='bridge' id='bridge'>Bridge<br>
                 <input type="checkbox" name ='baseLayerRadioButton' value='causeway' id='causeway'>Causeway<br>
+                <span id="name">Hello world</span>
             </div>
         </div>
         <div class="grid-2">
@@ -32,6 +33,7 @@
         <span class = 'overlay-text' id='feature-additional-info'></span><br>
         <span id="name"></span>
     </div>
+
     {% block page_content %}{% endblock %}
     <script src="{% static 'libs/v6.5.0-dist/ol.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
