road file loaded into gis server and updated into user interface

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,14 @@
                 <input type="checkbox" name ='baseLayerRadioButton' value='bridge' id='bridge'>Bridge<br>
                 <input type="checkbox" name ='baseLayerRadioButton' value='causeway' id='causeway'>Causeway<br>
             </div>
+            <div class="sidebar-1">
+                <h2>Maps</h2>
+                <input type="radio" name = 'baseLayerRadioButton' value='BingImage' >BingImage<br>
+                <input type="radio" name ='baseLayerRadioButton' value='OSMStandard' checked>OSM Standard<br>
+                <input type="radio" name ='baseLayerRadioButton' value='GoogleAerialImagery'>Google Aerial Imagery<br>
+                <input type="radio" name ='baseLayerRadioButton' value='GoogleHybrid'>Google Hybrid<br>
+                <input type="radio" name='baseLayerRadioButton' value='ESRIimage'>ESRI image <br>
+            </div>
         </div>
         <div class="grid-2">
             <div id='map' class='map'></div>
