--- a/GIS/static/styles.css
+++ b/GIS/static/styles.css
@@ -15,6 +15,10 @@ body{
 .sidebar{
     margin-left: 15px
 }
+.sidebar-1{
+    margin-left: 15px
+    margin-top:35px;
+}
 
 /* Feature Overlay */
 
